# starkgfx

./: .clang-format  CMakeLists.txt  xmake.lua
libs/: CMakeLists.txt
libs/glad/include/glad/: gl.h
libs/glad/src/: gl.c
libs/glfw/src/: context.c  egl_context.c  init.c  monitor.c  null_joystick.c  null_monitor.c  osmesa_context.c  platform.c  platform.h  vulkan.c  window.c  wl_platform.h  x11_platform.h
src/: demo.c  game.c  game.cpp  game.h  game.hpp  graphics.c  graphics.h  starkgfx.h
src/entities/: camera.c  camera.h  primitive.c  primitive.h
src/entity/: camera.hpp
src/gfx/: renderer.hpp
src/shader/: triangle.glsl  triangle.h
src/shaders/: triangle.shader
src/shaders/cube/: color_cube.frag  color_cube.vert  lamp_cube.frag  lamp_cube.vert
src/shaders/plane/: pplane.vs
src/shaders/triangle/: triangle.fs  triangle.vs
src/util/: input.h  load_shader.h  primitive.cpp  primitive.hpp  shader.h  shader.hpp  texture.hpp
